added prev/next functions

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="icon" type="image/png" href="icon.png">
   </head>
   <body>
-    <div id="pageitems"></div>
-    currentPage: <span id="currentpage"></span>
+    <div id="jspager_items"></div>
+    <button id="jspager_prev">&lt;Previous</button>
+    Page: <span id="jspager_currentpage"></span>
+    <select id="jspager_select">
+      
+    </select>
+    of: <span id="jspager_totalpages"></span>
+    <button id="jspager_next">Next&gt;</button>
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
