adding perPageItems selector...

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </select>
     of: <span id="jspager_totalpages"></span>
     <button id="jspager_next">Next&gt;</button>
+    perPage: <select id="jspager_perpage">
+      
+    </select>
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
