added input for page jump

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     </select>
     of: <span id="jspager_totalpages"></span>
     <button id="jspager_next">Next&gt;</button>
-    perPage: <select id="jspager_perpage">
-      
+    perPage: <select id="jspager_perpage">      
     </select>
+    jump to page:
+    <input type="text" name="" id="jspager_jump" placeholder="" />
+    <button id="jspager_jumpbtn">go</button>
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
