added page button anchors

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <p>jump to page:&nbsp;</p>
         <input type="text" name="" id="jspager_jump" class="jspager_jump" placeholder="" />
         <button id="jspager_jumpbtn" class="btn btn1-01">Go</button>
+        <br>
+        <nav id="jspager_pagebtnholder" class="jspager_pagebtnholder">
+        </nav>
       </div>
     </div>
     <script src="dist/main.bundle.js"></script>
