added first/last page buttons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <div class="jspager">
       <div id="jspager_items"></div>
       <div class="jspager_controls">
+        <button id="jspager_first" class="btn btn1-01 btn_first">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+        </svg>
+        First
+        </button>
         <button id="jspager_prev" class="btn btn1-01 btn_prev">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
@@ -29,6 +35,12 @@
         <p>of:&nbsp;</p><p id="jspager_totalpages"></p>
         <button id="jspager_next" class="btn btn1-01 btn_next">
         Next
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+        </svg>
+        </button>
+        <button id="jspager_last" class="btn btn1-01 btn_last">
+        Last
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
         </svg>
