--- a/index.html
+++ b/index.html
@@ -12,50 +12,93 @@
     <link rel="icon" type="image/png" href="icon.png">
   </head>
   <body>
-    <div class="jspager">
-      <div id="jspager_items"></div>
-      <div class="jspager_controls">
-        <button id="jspager_first" class="btn btn1-01 btn_first">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-        </svg>
-        First
-        </button>
-        <button id="jspager_prev" class="btn btn1-01 btn_prev">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-        </svg>
-        Prev
-        </button>
-        <p>Page:</p>
-        <p id="jspager_currentpage"></p>
-        <select id="jspager_select" class="jspager_select">
-          
-        </select>
-        <p>of:&nbsp;</p><p id="jspager_totalpages"></p>
-        <button id="jspager_next" class="btn btn1-01 btn_next">
-        Next
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-        </svg>
-        </button>
-        <button id="jspager_last" class="btn btn1-01 btn_last">
-        Last
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-        </svg>
-        </button>
-        <p>perPage:&nbsp;</p>
-        <select id="jspager_perpage" class="jspager_perpage">
-        </select>
-        <p>jump to page:&nbsp;</p>
-        <input type="text" name="" id="jspager_jump" class="jspager_jump" placeholder="" />
-        <button id="jspager_jumpbtn" class="btn btn1-01">Go</button>
-        <br>
-        <nav id="jspager_pagebtnholder" class="jspager_pagebtnholder">
-        </nav>
+    <!-- grid v2 -->
+    <div class="row jspager">
+      <!-- main item list -->
+      <div class="row">
+        <div id="jspager_items"></div>
       </div>
-    </div>
-    <script src="dist/main.bundle.js"></script>
-  </body>
-</html>
+      <!-- /main item list  -->
+      <div class="col-sm-8">
+        <!-- page selector/firstlast/page buttons -->
+        <div class="row">
+          <div class="col-md-3">
+            <!-- page selector -->
+            <div class="jspager_totalpagesholder">
+              <p>Page:</p>
+              <p id="jspager_currentpage"></p>
+              <select id="jspager_select" class="jspager_select">
+              </select>
+              <p>of:&nbsp;</p><p id="jspager_totalpages"></p>
+            </div>
+            <!-- /page selector -->
+          </div>
+          <div class="col-md-5">
+            <!-- firstlast -->
+            <div class="row jspager_prevnextholder">
+              <!-- first -->
+              <button id="jspager_first" class="col-xs-3 btn btn1-01 btn_first">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+              </svg>
+              <span>First</span>
+              </button>
+              <!-- prev -->
+              <button id="jspager_prev" class="col-xs-3 btn btn1-01 btn_prev">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+              </svg>
+              <span>Prev</span>
+              </button>
+              <!-- next -->
+              <button id="jspager_next" class="col-xs-3 btn btn1-01 btn_next">
+              <span>Next</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+              </svg>
+              </button>
+              <!-- last -->
+              <button id="jspager_last" class="col-xs-3 btn btn1-01 btn_last">
+              <span>Last</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+              </svg>
+              </button>
+            </div>
+            <!-- /firstlast -->
+            </div>
+            <div class="col-md-4">
+              <!-- page buttons -->
+              <div id="jspager_pagebtnholder" class="jspager_pagebtnholder">
+              </div>
+              <!-- /page buttons -->
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <!-- jump to page/perpage -->
+          <div class="row">
+            <div class="col-sm-6">
+              <!-- jump to page -->
+              <div class="jspager_jumptopageholder">
+                <p>jump to page:&nbsp;</p>
+                <input type="text" name="" id="jspager_jump" class=" jspager_jump" placeholder="" />
+                <button id="jspager_jumpbtn" class=" btn btn1-01">Go</button>
+              </div>
+              <!-- /jump to page -->
+            </div>
+            <div class="col-sm-6">
+              <!-- perpage -->
+              <div class="jspager_perpageholder">
+                <p>perPage:&nbsp;</p>
+                <select id="jspager_perpage" class="jspager_perpage">
+                </select>
+              </div>
+              <!-- /perpage -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="dist/main.bundle.js"></script>
+    </body>
+  </html>
