added default options

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <p id="jspager_currentpage"></p>
               <select id="jspager_select" class="jspager_select">
               </select>
-              <p>of:&nbsp;</p><p id="jspager_totalpages"></p>
+              <p id="jspager_totalpages"></p>
             </div>
             <!-- /page selector -->
           </div>
