--- a/index.html
+++ b/index.html
@@ -157,6 +157,81 @@
       </nav>
     </div>
     <!-- /jspager2 -->
+    <br>
+    <br>
+    <!-- jspager3 -->
+    <!-- jspager3 -->
+    <div class="jspager3_holder">
+      <!-- main item list -->
+      <div id="jspager3_items" class="row jspager3_items"
+        aria-atomic="true" aria-live="assertive" aria-relevant="all">
+      </div>
+      <!-- /main item list  -->
+      <nav class="jspager3">
+        <!-- page selector/firstlast/page buttons -->
+        <!-- firstprev -->
+        <aside class="jspager3_prevnextholder">
+          <!-- first -->
+          <button id="jspager3_first" class="btn btn_first" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>First</span>
+          </button>
+          <!-- prev -->
+          <button id="jspager3_prev" class="btn btn_prev" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>Prev</span>
+          </button>
+        </aside>
+        <!-- /firstprev -->
+        <!-- page selector -->
+        <aside class="jspager3_totalpagesholder">
+          <label for="jspager3_select">Page:</label>
+          <p id="jspager3_currentpage"></p>
+          <select id="jspager3_select" name="jspager3_select" class="jspager3_select" tabindex="0">
+          </select>
+          <p id="jspager3_totalpages"></p>
+        </aside>
+        <!-- /page selector -->
+        <!-- nextlast -->
+        <aside class="jspager3_prevnextholder">
+          <!-- next -->
+          <button id="jspager3_next" class="btn btn_next" tabindex="0">
+          <span>Next</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+          <!-- last -->
+          <button id="jspager3_last" class="btn btn_last" tabindex="0">
+          <span>Last</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+        </aside>
+        <!-- /nextlast -->
+        
+        <!-- page buttons -->
+        <aside id="jspager3_pagebtnholder" class="jspager3_pagebtnholder"
+          aria-atomic="true" aria-live="polite" aria-relevant="additions">
+        </aside>
+        <!-- /page buttons -->
+        
+        <!-- perpage -->
+        <aside class="jspager3_perpageholder">
+          <label for="jspager3_perpage">perPage:&nbsp;</label>
+          <select id="jspager3_perpage" name="jspager3_perpage" class="jspager3_perpage" tabindex="0">
+          </select>
+        </aside>
+        <!-- /perpage -->
+      </nav>
+    </div>
+    <!-- /jspager3 -->
+    <!-- /jspager3 -->
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
