--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
     <br>
     <br>
     <!-- jspager3 -->
-    <!-- jspager3 -->
     <div class="jspager3_holder">
       <!-- main item list -->
       <div id="jspager3_items" class="row jspager3_items"
@@ -231,7 +230,73 @@
       </nav>
     </div>
     <!-- /jspager3 -->
-    <!-- /jspager3 -->
+    <br>
+    <br>
+    <!-- jspager4 -->
+    <div class="jspager4_holder">
+      <!-- main item list -->
+      <div id="jspager4_items" class="row jspager4_items"
+        aria-atomic="true" aria-live="assertive" aria-relevant="all">
+      </div>
+      <!-- /main item list  -->
+      <nav class="jspager4">
+        <!-- page selector/firstlast/page buttons -->
+        <!-- firstprev -->
+        <aside class="jspager4_prevnextholder">
+          <!-- first -->
+          <button id="jspager4_first" class="btn btn_first" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>First</span>
+          </button>
+          <!-- prev -->
+          <button id="jspager4_prev" class="btn btn_prev" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>Prev</span>
+          </button>
+        </aside>
+        <!-- /firstprev -->
+        <!-- page selector -->
+        <aside class="jspager4_totalpagesholder">
+          <label for="jspager4_select">Page:</label>
+          <p id="jspager4_currentpage"></p>
+          <select id="jspager4_select" name="jspager4_select" class="jspager4_select" tabindex="0">
+          </select>
+          <p id="jspager4_totalpages"></p>
+        </aside>
+        <!-- /page selector -->
+        <!-- nextlast -->
+        <aside class="jspager4_prevnextholder">
+          <!-- next -->
+          <button id="jspager4_next" class="btn btn_next" tabindex="0">
+          <span>Next</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+          <!-- last -->
+          <button id="jspager4_last" class="btn btn_last" tabindex="0">
+          <span>Last</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+        </aside>
+        <!-- /nextlast -->
+        
+        <!-- perpage -->
+        <aside class="jspager4_perpageholder">
+          <label for="jspager4_perpage">perPage:&nbsp;</label>
+          <select id="jspager4_perpage" name="jspager4_perpage" class="jspager4_perpage" tabindex="0">
+          </select>
+        </aside>
+        <!-- /perpage -->
+      </nav>
+    </div>
+    <!-- /jspager4 -->
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
