--- a/index.html
+++ b/index.html
@@ -297,6 +297,80 @@
       </nav>
     </div>
     <!-- /jspager4 -->
+    <br>
+    <br>
+    <!-- jspager5 -->
+    <div class="jspager5_holder">
+      <!-- main item list -->
+      <div id="jspager5_items" class="row jspager5_items"
+        aria-atomic="true" aria-live="assertive" aria-relevant="all">
+      </div>
+      <!-- /main item list  -->
+      <nav class="jspager5">
+        <!-- page selector/firstlast/page buttons -->
+        <!-- page selector -->
+        <aside class="jspager5_totalpagesholder">
+          <label for="jspager5_select">Page:</label>
+          <p id="jspager5_currentpage"></p>
+          <select id="jspager5_select" name="jspager5_select" class="jspager5_select" tabindex="0">
+          </select>
+          <p id="jspager5_totalpages"></p>
+        </aside>
+        <!-- /page selector -->
+        <!-- firstprev -->
+        <aside class="jspager5_prevnextholder">
+          <!-- first -->
+          <button id="jspager5_first" class="btn btn_first" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>First</span>
+          </button>
+          <!-- prev -->
+          <button id="jspager5_prev" class="btn btn_prev" tabindex="0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+          </svg>
+          <span>Prev</span>
+          </button>
+        </aside>
+        <!-- /firstprev -->
+
+        <!-- page buttons -->
+        <aside id="jspager5_pagebtnholder" class="jspager5_pagebtnholder"
+          aria-atomic="true" aria-live="polite" aria-relevant="additions">
+        </aside>
+        <!-- /page buttons -->
+        
+        <!-- nextlast -->
+        <aside class="jspager5_prevnextholder">
+          <!-- next -->
+          <button id="jspager5_next" class="btn btn_next" tabindex="0">
+          <span>Next</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+          <!-- last -->
+          <button id="jspager5_last" class="btn btn_last" tabindex="0">
+          <span>Last</span>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+          </svg>
+          </button>
+        </aside>
+        <!-- /nextlast -->
+        
+        <!-- perpage -->
+        <aside class="jspager5_perpageholder">
+          <label for="jspager5_perpage">perPage:&nbsp;</label>
+          <select id="jspager5_perpage" name="jspager5_perpage" class="jspager5_perpage" tabindex="0">
+          </select>
+        </aside>
+        <!-- /perpage -->
+      </nav>
+    </div>
+    <!-- /jspager5 -->
     <script src="dist/main.bundle.js"></script>
   </body>
 </html>
