removed unused options

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- jump to page -->
         <aside class="jspager1_jumptopageholder">
           <label for="jspager1_jump">jump to page:&nbsp;</label>
-          <input type="text" name="jspager1_jump" id="jspager1_jump" class=" jspager1_jump" placeholder="" tabindex="0" />
+          <input type="tel" name="jspager1_jump" id="jspager1_jump" class=" jspager1_jump" placeholder="" tabindex="0" />
           <button id="jspager1_jumpbtn" class="btn" tabindex="0">Go</button>
         </aside>
         <!-- /jump to page -->
@@ -186,6 +186,7 @@
           </button>
         </aside>
         <!-- /firstprev -->
+
         <!-- page selector -->
         <aside class="jspager3_totalpagesholder">
           <label for="jspager3_select">Page:</label>
@@ -195,6 +196,7 @@
           <p id="jspager3_totalpages"></p>
         </aside>
         <!-- /page selector -->
+
         <!-- nextlast -->
         <aside class="jspager3_prevnextholder">
           <!-- next -->
@@ -259,6 +261,7 @@
           </button>
         </aside>
         <!-- /firstprev -->
+
         <!-- page selector -->
         <aside class="jspager4_totalpagesholder">
           <label for="jspager4_select">Page:</label>
@@ -268,6 +271,7 @@
           <p id="jspager4_totalpages"></p>
         </aside>
         <!-- /page selector -->
+
         <!-- nextlast -->
         <aside class="jspager4_prevnextholder">
           <!-- next -->
@@ -317,6 +321,7 @@
           <p id="jspager5_totalpages"></p>
         </aside>
         <!-- /page selector -->
+
         <!-- firstprev -->
         <aside class="jspager5_prevnextholder">
           <!-- first -->
